--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
 </head>
 
 <body>
+  <section class="section-benom">
+    <div class="left-side">
+      <div class="left-side-apsolute">
+        <p class="numbers-plus">40,000+</p>
+        <p class="text---p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique, magnam?</p>
+        <hr>
+        <div class="icons-around">
+
+        </div>
+      </div>
+      <div>
+        <img src="images/photo_2021-12-31_17-16-35.jpg" alt="image" width="400" height="460">
+      </div>
+    </div>
+    <div class="right-side">
+      <hr class="hr-line">
+      <h1 class="title-of">Lorem ipsum dolor sit amet consectetur.</h1>
+      <p class="text-of">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam rerum repudiandae molestiae vitae quis doloribus nobis. Fugiat, minus exercitationem necessitatibus asperiores aspernatur ipsum suscipit excepturi mollitia doloremque corporis! Beatae, illo?</p>
+    </div>
+  </section>
 
   <script src="js/main.js"></script>
 </body>
