--- a/index.html
+++ b/index.html
@@ -12,24 +12,81 @@
 </head>
 
 <body>
-  <section class="section-benom">
+  <section class="background-header">
+    <div class="header container">
+      <div class="left-logoside row">
+        <a class="logo" href="#"><img src="images/Logo.svg" alt="logo"></a>
+        <nav class="navbar">
+          <ul class="navbar-list row around">
+            <li class="navbar-list-item"><a href="#">Home</a></li>
+            <li class="navbar-list-item"><a href="#">Frature</a></li>
+            <li class="navbar-list-item"><a href="#">Service</a></li>
+            <li class="navbar-list-item"><a href="#">Listed</a></li>
+            <li class="navbar-list-item"><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="right-side-btns">
+        <a class="sing-btn" href="#">Sign up</a>
+        <a class="registration-btn" href="#">Register</a>
+      </div>
+    </div>
+    <section class="hero-home-section between container"> 
+      <div class="hero-title-left">
+        <p class="text-hero-1">Welcome to Besnik Agency</p>
+        <h2 class="title-hero-text">Discover a place you'll love to live.</h2>
+        <p class="text-hero-2">get the best real estate deals first before they hit the mass market! HOT FORECLOSURE DEALS with one simple search</p>
+        <a class="btn-more" href="#">More About Us</a>
+      </div>
+      <div class="hero-title-right">
+        <img src="images/house.svg" alt="">
+      </div>
+    </section>
+   </section>
+   <section class="man-performance-section">
+    <div class="main-section container">
+      <div class="left-side-performance">
+        <img class="icon-belgi" src="images/icon_belgi.svg" alt="icons" width="54" height="37">
+        <h2 class="title-of-customers">Customers Stories</h2>
+        <div class="little-section">
+          <img  src="images/profile_memoji.svg" alt="logo" width="57" height="63">
+          <div class="right-little-side">
+            <h3>Justin Pierre</h3>
+            <p class="text-little">Project Manager,Apple</p>
+            <img src="images/rating.svg" alt="stars-rating" width="69" height="13">
+          </div>
+        </div>
+        <p class="text-bar-section">Increased review rates have helped us grow our brands 20% year over year.Perferendis repudandae fugia rchitecto beatea rederit svitae recusa ndae debitifacere uiimi placeat maxienui</p>
+        <a  class="link-read-more" href="#">READ MORE</a>
+      </div>
+      <div class="right-side-performance">
+        <img class="emoji" src="images/emoji.svg" alt="emoji">
+        <img class="man-image" src="images/man-image.svg" alt="man">
+      </div>
+    </div>
+   </section>
+ 
+  <!-- bu position ishlatilgan asosiy section -->
+   <section class="section-status">
     <div class="left-side">
       <div class="left-side-apsolute">
-        <p class="numbers-plus">40,000+</p>
+        <h3 class="number-plus">40,000+</h3>
         <p class="text---p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique, magnam?</p>
         <hr>
         <div class="icons-around">
 
         </div>
       </div>
-      <div>
-        <img src="images/photo_2021-12-31_17-16-35.jpg" alt="image" width="400" height="460">
+      <div class="image">
+        <img class="image-cristmas" src="images/photo_2021-12-31_17-16-35.jpg" alt="image" width="400" height="460">
       </div>
     </div>
     <div class="right-side">
       <hr class="hr-line">
       <h1 class="title-of">Lorem ipsum dolor sit amet consectetur.</h1>
-      <p class="text-of">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam rerum repudiandae molestiae vitae quis doloribus nobis. Fugiat, minus exercitationem necessitatibus asperiores aspernatur ipsum suscipit excepturi mollitia doloremque corporis! Beatae, illo?</p>
+      <p class="text-of">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam rerum repudiandae molestiae
+        vitae quis doloribus nobis. Fugiat, minus exercitationem necessitatibus asperiores aspernatur ipsum suscipit
+        excepturi mollitia doloremque corporis! Beatae, illo?</p>
     </div>
   </section>
 
